--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,3 +1,8 @@
 DIGIT_50: 50
 DIGIT_255: 255
+DIGIT_6: 6
+PAGE_10: 10
 HUNDRED_YEARS: 100
+SIZE_50: 50
+SIZE_80: 80
+OPTIONS_GENDER: ["male", "female", "other"]
